# OCR

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  README.md  docker-compose.override.yml  docker-compose.yml
.ai/: prompts_trien_khai_code.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: backend-ci.yml  frontend-ci.yml  ocr-ci.yml  security-scan.yml
backend/: .dockerignore  Dockerfile  pom.xml
backend/congvan-app/: pom.xml
backend/congvan-audit/: pom.xml
backend/congvan-auth/: pom.xml
backend/congvan-common/: pom.xml
backend/congvan-inbound/: pom.xml
backend/congvan-integration/: pom.xml
backend/congvan-masterdata/: pom.xml
backend/congvan-ocr/: pom.xml
backend/congvan-outbound/: pom.xml
backend/congvan-search/: pom.xml
backend/congvan-signature/: pom.xml
backend/congvan-workflow/: pom.xml
db/migration/: README.md
docs/: README.md  architecture_congvan_full_defense (1).md  tech_stack_congvan_system.md  website_framework_vietnam_legal.md
frontend/: .dockerignore  Dockerfile  README.md  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.tsbuildinfo
ocr-service/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
ocr-service/app/: __init__.py  main.py
ocr-service/app/api/: health.py  ocr.py
ocr-service/app/core/: auth.py  config.py
ocr-service/app/schemas/: ocr.py
ocr-service/app/services/: field_extractor.py  ocr_engine.py  preprocessor.py
ocr-service/tests/: test_field_extractor.py  test_health.py
scripts/: bootstrap-dev.sh  gen-jwt-keys.sh
(+303 files in other folders)
