[project]
name = "congvan-ocr-service"
version = "0.1.0"
description = "OCR service tiếng Việt cho hệ thống quản lý công văn — FastAPI + PaddleOCR."
requires-python = ">=3.11,<3.13"
readme = "README.md"
license = { text = "Academic" }
dependencies = [
    "fastapi>=0.111.0,<0.112.0",
    "uvicorn[standard]>=0.30.0,<0.31.0",
    "pydantic>=2.7.0,<3.0.0",
    "pydantic-settings>=2.3.0,<3.0.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "pillow>=10.3.0",
    "numpy>=1.26.0,<2.0.0",
    "opencv-python-headless>=4.9.0",
    "pdf2image>=1.17.0",
    "paddleocr>=2.8.0",
    "paddlepaddle>=2.6.0",
    "underthesea>=6.8.4",
    "python-json-logger>=2.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "PT"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
